// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HOC disabledTooltip disabled false and button events (click, mouseover) 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div
  className="c0"
>
  <button
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    A Button with events
  </button>
</div>
`;

exports[`Storyshots HOC disabledTooltip disabled html button 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div
  className="c0"
>
  <div
    className="hitArea"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <button
    disabled={true}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    A disabled Button
  </button>
</div>
`;

exports[`Storyshots HOC disabledTooltip disabled input 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div>
  text before
  <div
    className="c0"
  >
    <div
      className="hitArea"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    />
    <input
      disabled={true}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      type="text"
    />
  </div>
  text after
</div>
`;

exports[`Storyshots HOC disabledTooltip disabled input with custom Tooltip text 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div
  className="c0"
>
  <div
    className="hitArea"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <input
    disabled={true}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    type="checkbox"
  />
</div>
`;

exports[`Storyshots HOC disabledTooltip disabled input with tooltip right aligned 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div
  className="c0"
>
  <div
    className="hitArea"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  />
  <input
    disabled={true}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    type="text"
  />
</div>
`;

exports[`Storyshots HOC disabledTooltip enhanced element with display block 1`] = `
.c0 {
  position: relative;
  display: block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div>
  text before
  <div
    className="c0"
  >
    <div
      className="hitArea"
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
    />
    <input
      disabled={true}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      type="text"
    />
  </div>
  text after
</div>
`;

exports[`Storyshots HOC disabledTooltip no tooltip 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c0 .hitArea {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.c0 .appear-enter {
  opacity: 0;
}

.c0 .appear-enter-active {
  opacity: 1;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

.c0 .appear-exit {
  opacity: 1;
}

.c0 .appear-exit-active {
  opacity: 0;
  -webkit-transition: opacity 100ms ease-in;
  transition: opacity 100ms ease-in;
}

<div
  className="c0"
>
  <button
    disabled={true}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    A disabled Button
  </button>
</div>
`;
